# chatserver-rs

./: .gitignore  Cargo.toml  config.json
src/: attachments.rs  channel.rs  client_connection.rs  commands.rs  config_parser.rs  db_interaction.rs  main.rs  message.rs  server.rs  signal_handler.rs  user.rs
src/commands/: history.rs  ident.rs  join.rs  mod.rs  msg.rs  not_viewing.rs  register.rs  viewing.rs
src/db/: mod.rs  sqlite.rs  table_initialization.sql
src/db/sql/: history.sql  history_range.sql  table_initialization.sql
src/models/: channel.rs  mod.rs  user.rs
src/server/: attachments.rs  chat_server.rs  client_connection.rs  manager.rs  mod.rs
