[package]
name = "chat"
version = "0.1.0"
authors = ["Blair Urish <burace17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.12.0"
native-tls = "0.2.7"
serde_json = "1.0.61"
thiserror = "1.0"
