[package]
name = "chat"
version = "0.1.0"
authors = ["Blair Urish <burace17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13.0"
tokio-native-tls = "0.3.0"
tokio-stream = "0.1.2"
native-tls = "0.2.7"
serde_json = "1.0.61"
thiserror = "1.0"
futures-util = "0.3.9"
async-stream = "0.3.0"
tungstenite = "0.12.0"
lazy_static = "1.4.0"
regex = "1.4.3"
boolinator = "2.4.0"