[package]
name = "chat"
version = "0.1.0"
authors = ["Blair Urish <burace17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13"
tokio-native-tls = "0.3"
tokio-stream = { version = "0.1", features = ["sync"]}
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
futures-util = "0.3"
async-stream = "0.3"
tungstenite = "0.12"
lazy_static = "1.4"
regex = "1.4"
boolinator = "2.4"
sodiumoxide = "0.2"
multi-map = "1.3"
anyhow = "1.0"
linkify = "0.5"
async-trait = "0.1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"]}
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"]}